--- a/src/Styles/ActivityCenter.css
+++ b/src/Styles/ActivityCenter.css
@@ -1,14 +1,12 @@
 .releaseActivities{
     font-size: 0.73vw;
     width:150px;
-    height: 3vw;
+    height: 30px;
     background: transparent;
     background-image: url("../Assets/greenButtonLong.png");
     background-size: 100% 100%;
     border: none;
     cursor: pointer;
-    margin-right: 20px;
-    padding: 10px;
     font-weight: 600;
 
     
@@ -18,6 +16,6 @@
     font-size: 1.25vw;
     font-weight: 600;
     margin: 10px;
-    margin-top: 5vw;
+    margin-top: 50px;
     margin-bottom: 2vw;
 }
