--- a/src/Styles/Settings.css
+++ b/src/Styles/Settings.css
@@ -8,8 +8,8 @@
 }
 
 .profileButtons{
-    width: 18vw;
-    margin-top: 5vw;
+    width: 180px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
 
@@ -17,7 +17,7 @@
 
 .profileButton{
     width: 100%;
-    height: 3vw;
+    height: 30px;
     font-size: 1.25vw;
     font-weight: 600;
     color: #666666;
@@ -26,7 +26,8 @@
     border-left: 2px solid #4D4D4D;
     display: flex;
     flex-direction: column;
-    line-height: 2.5vw;
+    line-height: 30px;
+    cursor: pointer;
 
 }
 
@@ -37,7 +38,7 @@
 
 .profileContent{
     width:50vw;
-    margin-top: 5vw;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
 }
@@ -112,8 +113,8 @@
 .applyButton{
     color: white;
     float: right;
-    width: 18vw;
-    height: 3.125vw;
+    width: 240px;
+    height: 40px;
     background: transparent;
     background-image: url("../Assets/whiteHollowButtonLong.png");
     background-size: 100% 100%;
@@ -121,7 +122,10 @@
     cursor: pointer;
     margin-top: 100px;
     margin-bottom: 100px;
-    margin-right: 20px;
-    padding: 10px;
     font-weight: 700;
+}
+
+@media screen and (max-width: 650px){
+    .profile{width: 90vw;}
+    .profileButtons{width: 130px;}
 }
