--- a/src/Styles/BadgeProfile.css
+++ b/src/Styles/BadgeProfile.css
@@ -16,6 +16,7 @@
     margin:auto;
     margin-top:10vh;
     margin-bottom:10vh;
+    padding-bottom: 50px;
     border-radius: 20px;
     border: white solid 2px;
     display: flex;
@@ -82,6 +83,7 @@
 .badgeProfileImg{
     margin: auto;
     margin-bottom: 200px;
+    margin-top: 100px;
     margin-left: 2vw;
     border-radius: 100%;
     background-color: white;
