--- a/src/Styles/Registration.css
+++ b/src/Styles/Registration.css
@@ -118,8 +118,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
     width: 500px;
+    height: 90px;
     display: flex;
-    justify-content: space-between;
 }
 
 .backButton{
