--- a/src/Styles/Benefits.css
+++ b/src/Styles/Benefits.css
@@ -20,7 +20,7 @@
 
 #benefits_title h1{
     font-weight: 800;
-    font-size: 3.5vw;
+    font-size: 45px;
 }
 
 #benefits_content{
@@ -33,7 +33,7 @@
 }
 
 .benefitsBlock{
-    font-size: 1.5vh;
+    font-size: 15px;
     color: white;
     width: 30%;
 }
@@ -66,7 +66,7 @@
 }
 
 .benefitsDetails h3{
-    font-size: 1.5vh;
+    font-size: 18px;
     font-weight: 700;
 }
 
